--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-hacker
 title: Scripts for Proxmox
-description: I created this collection of scripts to make setting up Proxmox servers easier and also faster for me.
+description: A collection of scripts for Proxmox
 markdown: kramdown
 kramdown:
   parse_block_html: true
