--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-hacker
+theme: jekyll-theme-midnight
 title: Scripts for Proxmox
 description: A collection of scripts for Proxmox
 markdown: kramdown
